{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Car",
            "id": "7eb9af37-ad64-4780-924d-cc6be76b4b29",
            "actions": [
                {
                    "name": "Throttle",
                    "type": "PassThrough",
                    "id": "cd055ec4-e625-4526-a0e6-b997cd7f2ae4",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Brake",
                    "type": "PassThrough",
                    "id": "1f44c211-1427-4ba5-a8f3-56592d1f1049",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UpShift",
                    "type": "Button",
                    "id": "dec95063-6fad-4151-bcb9-5812357be88f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownShift",
                    "type": "Button",
                    "id": "6065193c-7f11-46b6-9c47-44b8f0f4740c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Steering",
                    "type": "PassThrough",
                    "id": "f61388d5-a893-4253-9024-d72d41a51926",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Handbrake",
                    "type": "Button",
                    "id": "51b2813c-6ba7-4e91-9dcf-5ae4ec431272",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1690a7eb-e7ea-44d0-b7d7-0b38033c5f84",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "640d28b4-51f7-4b36-9f4b-be237145d6fe",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "293eff6d-bd88-40db-afa0-d54ad51020f2",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8c1ef96-ed94-4c2f-a326-5df4f3b901b4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9ce2e48-3b9b-45ba-b922-94e43644356d",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UpShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0188c7f-e9f8-4e88-83bd-975f836decf2",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "UpShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae6ed95d-2176-477b-ab05-2ee1d3d113d9",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DownShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d57cf8b-a3b3-431d-9b48-366dedd8fbcf",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "DownShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "3b0f2fd7-cef7-48d4-99bc-ba352c73307e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4fbebb62-32bf-430b-992c-532845f3fbb9",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ec29e235-f788-4d0e-894e-969f244e82c4",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "aa8ce147-1c37-49de-82a1-441a07c731e4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5f1534d0-35c2-4a7e-8ea2-380c00cb00a8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d61915e7-4b66-4ea3-83a1-a6d542ec0fbf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5438c282-50b2-4e82-9e6c-83c6053cfa2f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Handbrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "384b7be0-9075-4114-be14-d545d984e19b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "Handbrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "cb134a92-f78b-4976-8817-db74a04cf1d4",
            "actions": [
                {
                    "name": "ChangeCameraMode",
                    "type": "Button",
                    "id": "0743d4e0-416d-4cdf-b781-f36bd52c9be5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraLeftRight",
                    "type": "PassThrough",
                    "id": "ae1ea66e-9b00-4ee0-96a4-d22d71032a8c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraUpDown",
                    "type": "PassThrough",
                    "id": "53059933-2c97-4765-ad5e-ada8ae854d5b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1fb011a9-2c33-4132-8910-3001de2706e1",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeCameraMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e282fbb0-b59a-4c33-9d6d-2991440b92e9",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "ChangeCameraMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "cf978424-9607-45f5-8df1-41495ad3b96a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "601ede91-f50c-4a3d-9b99-c2aa20afcbb1",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "CameraLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "214c77ac-9174-4715-965d-e2b4e671c5f1",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "CameraLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "f745807c-2a0d-4ffd-bdfe-f57fa393aab3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d0b6b709-04e6-47a7-b2fd-0beaa6a1652d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d0ded7a4-7c9d-4bc3-9b1a-2ebff65cce5a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "8f2fdb02-7746-4634-8905-a6a32dac6f80",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraUpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ee4384cc-f53a-431e-9bbf-7cb704b5ec40",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "CameraUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "840aa4f1-c786-4ef2-b5e7-2508dab3f3de",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad;SteeringWheel",
                    "action": "CameraUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "d36a6bdf-bdcc-4690-b3e7-f6573e4f587b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraUpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "84cbf68f-235d-46dd-9bbb-8a99838bb5bd",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f31d46f3-c3cb-4d30-90aa-151169c88b3f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CameraUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>/{Back}",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "gamepad",
            "bindingGroup": "gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "SteeringWheel",
            "bindingGroup": "SteeringWheel",
            "devices": []
        }
    ]
}